fixed alignment of slides

--- a/style.css
+++ b/style.css
@@ -1,32 +1,38 @@
 html, body {
     background: #000;
     overflow: hidden;
-    height: 99%;
-    width: 99%;
+    height: 99vh;
+    width: 99vw;
     text-align: center;
     margin: 0px;
-    padding: 0.5%;
+    padding: 0.5vw;
 }
 .main-container{
     overflow: hidden;
-    height:100%;
-    width:100%;
+    height:99vh;
+    width:99vw;
 }
 .header {
     color:#FFF; 
     background-color:#000;
 }
 .slideshow {
-    height:80%;
-    width:auto;
+    height:80vh;
+    width:100vw;
 }
 .slide {
-    height:100%;
-    width:auto;
+    height:100vh;
+    width:100vw;
 }
 .slide-img {
     height: auto; 
     width: auto; 
-    max-width: 100%; 
-    max-height: 100%;
+    max-width: 100vw; 
+    max-height: 100vh;
+}
+.slide-img_2 {
+    height: auto; 
+    width: auto; 
+    max-width: 100vw; 
+    max-height: 100vh;
 }
